[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sae"
description = "Sparse autoencoders"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["interpretability", "explainable-ai"]
license = {text = "MIT License"}
dependencies = [
    "accelerate",   # For device_map in from_pretrained
    "datasets",
    "einops",
    "jaxtyping",
    "safetensors",
    "simple-parsing",
    "torch",
    "transformers",
    "transformer_lens",
    "triton",
    "mamba_lens @ git+https://github.com/Phylliida/MambaLens.git",
    # format/CI
    "ruff",
    "pyright",
    "pytest",
]
version = "0.1.0"

[project.scripts]
sae = "sae.__main__:run"

[project.optional-dependencies]
dev-local = [
    "pre-commit",
]

[tool.pyright]
include = ["sae*"]
reportPrivateImportUsage = false

[tool.setuptools.packages.find]
include = ["sae*"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
# Enable pycodestyle (`E`), Pyflakes (`F`), and isort (`I`) codes
# See https://beta.ruff.rs/docs/rules/ for more possible rules
select = ["E", "F", "I"]
# Make jaxtyping usable
ignore = ["F722"]
# Avoid automatically removing unused imports in __init__.py files.
# Such imports will be flagged with a dedicated message suggesting
# that the import is either added to the module's __all__ symbol
ignore-init-module-imports = true
